--- a/lesson2_tutorial.ipynb
+++ b/lesson2_tutorial.ipynb
@@ -57,7 +57,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 222,
+      "execution_count": 239,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -75,7 +75,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 223,
+      "execution_count": 240,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -126,7 +126,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 224,
+      "execution_count": 241,
       "metadata": {
         "trusted": true
       },
@@ -165,7 +165,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 225,
+      "execution_count": 242,
       "metadata": {
         "trusted": true
       },
@@ -205,7 +205,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 226,
+      "execution_count": 243,
       "metadata": {
         "trusted": true
       },
@@ -256,7 +256,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 227,
+      "execution_count": 244,
       "metadata": {
         "trusted": true
       },
@@ -297,7 +297,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 228,
+      "execution_count": 245,
       "metadata": {
         "trusted": true
       },
@@ -365,7 +365,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 229,
+      "execution_count": 246,
       "metadata": {
         "trusted": true
       },
@@ -424,7 +424,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 230,
+      "execution_count": 247,
       "metadata": {
         "trusted": true
       },
@@ -470,7 +470,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 231,
+      "execution_count": 248,
       "metadata": {
         "trusted": true
       },
@@ -526,7 +526,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "The results are far.\n"
+            "The results are far, therefore the operation is not commutative\n"
           ]
         },
         {
@@ -540,12 +540,6 @@
         }
       ],
       "source": [
-        "import spatialmath as sm\n",
-        "import matplotlib.pyplot as plt\n",
-        "from math import pi\n",
-        "\n",
-        "fig = plt.figure() \n",
-        "\n",
         "# An SE(3) translation\n",
         "x = 1\n",
         "y = 2\n",
@@ -593,7 +587,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 238,
+      "execution_count": 250,
       "metadata": {
         "trusted": true
       },
